# lovepopi_patch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.cpp  config.hpp  dllmain.cpp  main.cpp  meson.build  winres.meson.rc  winres.rc
include/: zconf.h
lib/: detours.lib  zlib.lib
